change label file

--- a/convertHASCToTimeSeries.ipynb
+++ b/convertHASCToTimeSeries.ipynb
@@ -2,12 +2,55 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd \n",
     "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "raw shape: (39397, 4), label shape: (38, 3)\n",
+      "Raw activity data\n",
+      "          time         x         y         z\n",
+      "0  5015.672119  0.115128 -0.988739 -0.090057\n",
+      "1  5015.687371  0.110138 -0.986694 -0.086288\n",
+      "2  5015.704061  0.116180 -0.991669 -0.091003\n",
+      "3  5015.715389  0.112259 -0.989670 -0.091095\n",
+      "4  5015.726564  0.114349 -0.989746 -0.097855\n",
+      "\n",
+      "raw label data\n",
+      "      start       end                    label\n",
+      "0  5071.934       NaN       move;escalator;B2F\n",
+      "1  5098.502  5126.499         escalatorUp;stay\n",
+      "2  5126.970       NaN           move;floor;B1F\n",
+      "3  5127.665  5143.411  walk;floor;B1F;steps;22\n",
+      "4  5147.988       NaN       move;escalator;B1F\n"
+     ]
+    }
+   ],
+   "source": [
+    "raw_file = './data/hasc-111018-165936-acc.csv'\n",
+    "raw_label = './data/hasc-111018-165936-acc.label'\n",
+    "\n",
+    "raw_df = pd.read_csv(raw_file, header=None)\n",
+    "raw_df.columns = ['time', 'x', 'y', 'z']\n",
+    "raw_label_df = pd.read_csv(raw_label, skiprows=1, header=None)\n",
+    "raw_label_df.columns = ['start', 'end', 'label']\n",
+    "print(f'raw shape: {raw_df.shape}, label shape: {raw_label_df.shape}')\n",
+    "print('Raw activity data')\n",
+    "print(raw_df.head())\n",
+    "print('\\nraw label data')\n",
+    "print(raw_label_df.head())"
    ]
   },
   {
@@ -19,55 +62,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "raw shape: (39397, 4), label shape: (40, 3)\n",
-      "Raw activity data\n",
-      "          time         x         y         z\n",
-      "0  5015.672119  0.115128 -0.988739 -0.090057\n",
-      "1  5015.687371  0.110138 -0.986694 -0.086288\n",
-      "2  5015.704061  0.116180 -0.991669 -0.091003\n",
-      "3  5015.715389  0.112259 -0.989670 -0.091095\n",
-      "4  5015.726564  0.114349 -0.989746 -0.097855\n",
-      "\n",
-      "raw label data\n",
-      "      start       end                    label\n",
-      "0  5057.661  5091.260  walk;floor;B2F;steps;44\n",
-      "1  5071.934       NaN                walk;turn\n",
-      "2  5098.502  5126.499         escalatorUp;stay\n",
-      "3  5125.117       NaN           move;floor;B1F\n",
-      "4  5127.665  5143.411  walk;floor;B1F;steps;22\n"
-     ]
-    }
-   ],
-   "source": [
-    "raw_file = './data/hasc-111018-165936-acc.csv'\n",
-    "raw_label = './data/hasc-111018-165936.label'\n",
-    "\n",
-    "raw_df = pd.read_csv(raw_file, header=None)\n",
-    "raw_df.columns = ['time', 'x', 'y', 'z']\n",
-    "raw_label_df = pd.read_csv(raw_label, skiprows=2, header=None)\n",
-    "raw_label_df.columns = ['start', 'end', 'label']\n",
-    "print(f'raw shape: {raw_df.shape}, label shape: {raw_label_df.shape}')\n",
-    "print('Raw activity data')\n",
-    "print(raw_df.head())\n",
-    "print('\\nraw label data')\n",
-    "print(raw_label_df.head())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   level_0  index         time         x         y         z   l2_norm\n",
-      "0        0      0  5015.672119  0.115128 -0.988739 -0.090057  0.999485\n",
-      "1        1      1  5015.687371  0.110138 -0.986694 -0.086288  0.996565\n",
-      "2        2      2  5015.704061  0.116180 -0.991669 -0.091003  1.002590\n",
-      "3        3      3  5015.715389  0.112259 -0.989670 -0.091095  1.000174\n",
-      "4        4      4  5015.726564  0.114349 -0.989746 -0.097855  1.001124\n"
+      "   index         time         x         y         z\n",
+      "0      0  5015.672119  0.115128 -0.988739 -0.090057\n",
+      "1      1  5015.687371  0.110138 -0.986694 -0.086288\n",
+      "2      2  5015.704061  0.116180 -0.991669 -0.091003\n",
+      "3      3  5015.715389  0.112259 -0.989670 -0.091095\n",
+      "4      4  5015.726564  0.114349 -0.989746 -0.097855\n"
      ]
     }
    ],
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +93,7 @@
        "Name: l2_norm, dtype: float64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -165,10 +165,10 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "fe9924e612cbd6f7c4bcff816479be941ee7fe7f1ea68d73d5f3591189c647f1"
+   "hash": "b1e259f8989b5c9c45559a1752ef2f72f727f33e7b4cd49fa4d8dfdfbce9ad9e"
   },
   "kernelspec": {
-   "display_name": "Python 3.8.10 64-bit ('ml': venv)",
+   "display_name": "Python 3.9.7 ('ml')",
    "language": "python",
    "name": "python3"
   },
@@ -182,7 +182,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.7"
   },
   "orig_nbformat": 4
  },
