fix bug: eeg dataset produce change point error

--- a/convertHASCToTimeSeries.ipynb
+++ b/convertHASCToTimeSeries.ipynb
@@ -7,7 +7,15 @@
    "outputs": [],
    "source": [
     "import pandas as pd \n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# HASC-2011 dataset preprocess"
    ]
   },
   {
@@ -76,20 +84,6 @@
     "raw_df = raw_df.reset_index()\n",
     "print(raw_df.head())"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### ICA + L2 norm"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -181,6 +175,263 @@
    "source": [
     "# save\n",
     "np.savetxt('./data/preprocess/hasc_label_index.txt', breakpoints_index, fmt='%i')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# EEG dataset preprocess"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'c:\\\\Users\\\\Minh Nhat\\\\Downloads\\\\DCU\\\\Practicum\\\\TIRE-custom'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.path.abspath('')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Minh Nhat\\Downloads\\DCU\\Practicum\\TIRE-custom\\../Data/grasp-and-lift-eeg-detection/train/\n"
+     ]
+    }
+   ],
+   "source": [
+    "# dirname = os.path.dirname(__file__) # it's not working with ipynb\n",
+    "dirname = os.path.abspath('')\n",
+    "eeg_training_data_folder = os.path.join(dirname, '../Data/grasp-and-lift-eeg-detection/train/')\n",
+    "print(eeg_training_data_folder)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "file data format: subj1_series2_data.csv\n",
+      "file events format: subj1_series2_events.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "file_data_format = 'subj{}_series{}_data.csv'\n",
+    "file_events_format = 'subj{}_series{}_events.csv'\n",
+    "subject = 1\n",
+    "series = 2\n",
+    "print(f'file data format: {file_data_format.format(subject, series)}')\n",
+    "print(f'file events format: {file_events_format.format(subject, series)}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(119496, 7)"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "events_1_1_df = pd.read_csv(os.path.join(eeg_training_data_folder, file_events_format.format(1, 1)))\n",
+    "events_1_1_df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(291874, 7)"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "events_2_1_df = pd.read_csv(os.path.join(eeg_training_data_folder, file_events_format.format(2, 1)))\n",
+    "events_2_1_df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "411370"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "events_1_1_df.shape[0] + events_2_1_df.shape[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "test create_files_by_template\n",
+      "['c:\\\\Users\\\\Minh Nhat\\\\Downloads\\\\DCU\\\\Practicum\\\\TIRE-custom\\\\../Data/grasp-and-lift-eeg-detection/train/subj1_series1_events.csv', 'c:\\\\Users\\\\Minh Nhat\\\\Downloads\\\\DCU\\\\Practicum\\\\TIRE-custom\\\\../Data/grasp-and-lift-eeg-detection/train/subj2_series1_events.csv']\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(411370, 7)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from typing import List\n",
+    "\n",
+    "def create_files_by_template(base_folder: str, template: str, subjects: iter, series: int):\n",
+    "    result = []\n",
+    "    for subject in subjects:\n",
+    "        file_name = template.format(subject, series)\n",
+    "        result.append(os.path.join(base_folder, file_name))\n",
+    "    return result \n",
+    "\n",
+    "def concat_files_by_row(files: List[str]):\n",
+    "    def read_file_df(f: str):\n",
+    "        df = pd.read_csv(f)\n",
+    "        return df\n",
+    "    frames = [read_file_df(f) for f in files ]\n",
+    "    result = pd.concat(frames)\n",
+    "    return result \n",
+    "\n",
+    "print(f'test create_files_by_template')\n",
+    "list_file_label = create_files_by_template(eeg_training_data_folder, file_events_format, subjects=range(1, 3), series=1)\n",
+    "print(list_file_label)\n",
+    "combine_label_df = concat_files_by_row(list_file_label)\n",
+    "combine_label_df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "type: training\n",
+      "type: validation\n",
+      "type: testing\n"
+     ]
+    }
+   ],
+   "source": [
+    "def create_dataset(series: int):\n",
+    "    # create database by series. \n",
+    "    # training: subject 1-> 8 / validation: 9, 10 / testing: 11, 12\n",
+    "    configs = [('training', range(1, 9)), ('validation', range(9, 11)), ('testing', range(11, 13))]\n",
+    "\n",
+    "    if os.path.exists('./data/eeg_grasp_and_lift/') == False:\n",
+    "        os.makedirs('./data/eeg_grasp_and_lift/')\n",
+    "        \n",
+    "    for config in configs:\n",
+    "        print(f'type: {config[0]}')\n",
+    "        list_file_data = create_files_by_template(eeg_training_data_folder, file_data_format, subjects=config[1], series=series)\n",
+    "        combine_data_df = concat_files_by_row(list_file_data)\n",
+    "        combine_data_df.to_csv(f'./data/eeg_grasp_and_lift/dataset{series}_{config[0]}_data.csv', index=False)\n",
+    "\n",
+    "        list_file_label = create_files_by_template(eeg_training_data_folder, file_events_format, subjects=config[1], series=series)\n",
+    "        combine_label_df = concat_files_by_row(list_file_label)\n",
+    "        combine_label_df.to_csv(f'./data/eeg_grasp_and_lift/dataset{series}_{config[0]}_label.csv', index=False)\n",
+    "\n",
+    "# test create dataset 1\n",
+    "create_dataset(1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "type: training\n",
+      "type: validation\n",
+      "type: testing\n",
+      "type: training\n",
+      "type: validation\n",
+      "type: testing\n",
+      "type: training\n",
+      "type: validation\n",
+      "type: testing\n",
+      "type: training\n",
+      "type: validation\n",
+      "type: testing\n",
+      "type: training\n",
+      "type: validation\n",
+      "type: testing\n",
+      "type: training\n",
+      "type: validation\n",
+      "type: testing\n",
+      "type: training\n",
+      "type: validation\n",
+      "type: testing\n"
+     ]
+    }
+   ],
+   "source": [
+    "for series in range(2, 9):\n",
+    "    create_dataset(series)"
    ]
   }
  ],
