--- a/DataPreprocess.ipynb
+++ b/DataPreprocess.ipynb
@@ -206,14 +206,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\Minh Nhat\\Downloads\\DCU\\Practicum\\TIRE-custom\\../Data/grasp-and-lift-eeg-detection/train/\n"
+      "c:\\Users\\Minh Nhat\\Downloads\\DCU\\Practicum\\TIRE-custom\\../Data/grasp-and-lift-eeg-detection/train/\n",
+      "file data format: subj1_series2_data.csv\n",
+      "file events format: subj1_series2_events.csv\n"
      ]
     }
    ],
@@ -221,24 +223,8 @@
     "# dirname = os.path.dirname(__file__) # it's not working with ipynb\n",
     "dirname = os.path.abspath('')\n",
     "eeg_training_data_folder = os.path.join(dirname, '../Data/grasp-and-lift-eeg-detection/train/')\n",
-    "print(eeg_training_data_folder)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "file data format: subj1_series2_data.csv\n",
-      "file events format: subj1_series2_events.csv\n"
-     ]
-    }
-   ],
-   "source": [
+    "print(eeg_training_data_folder)\n",
+    "\n",
     "file_data_format = 'subj{}_series{}_data.csv'\n",
     "file_events_format = 'subj{}_series{}_events.csv'\n",
     "subject = 1\n",
@@ -249,90 +235,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(119496, 7)"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "events_1_1_df = pd.read_csv(os.path.join(eeg_training_data_folder, file_events_format.format(1, 1)))\n",
-    "events_1_1_df.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(291874, 7)"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "events_2_1_df = pd.read_csv(os.path.join(eeg_training_data_folder, file_events_format.format(2, 1)))\n",
-    "events_2_1_df.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "411370"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "events_1_1_df.shape[0] + events_2_1_df.shape[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "test create_files_by_template\n",
-      "['c:\\\\Users\\\\Minh Nhat\\\\Downloads\\\\DCU\\\\Practicum\\\\TIRE-custom\\\\../Data/grasp-and-lift-eeg-detection/train/subj1_series1_events.csv', 'c:\\\\Users\\\\Minh Nhat\\\\Downloads\\\\DCU\\\\Practicum\\\\TIRE-custom\\\\../Data/grasp-and-lift-eeg-detection/train/subj2_series1_events.csv']\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(411370, 7)"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from typing import List\n",
     "\n",
@@ -351,28 +256,18 @@
     "    result = pd.concat(frames)\n",
     "    return result \n",
     "\n",
-    "print(f'test create_files_by_template')\n",
-    "list_file_label = create_files_by_template(eeg_training_data_folder, file_events_format, subjects=range(1, 3), series=1)\n",
-    "print(list_file_label)\n",
-    "combine_label_df = concat_files_by_row(list_file_label)\n",
-    "combine_label_df.shape"
+    "# print(f'test create_files_by_template')\n",
+    "# list_file_label = create_files_by_template(eeg_training_data_folder, file_events_format, subjects=range(1, 3), series=1)\n",
+    "# print(list_file_label)\n",
+    "# combine_label_df = concat_files_by_row(list_file_label)\n",
+    "# combine_label_df.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "type: training\n",
-      "type: validation\n",
-      "type: testing\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def create_dataset(series: int):\n",
     "    # create database by series. \n",
@@ -393,12 +288,12 @@
     "        combine_label_df.to_csv(f'./data/eeg_grasp_and_lift/dataset{series}_{config[0]}_label.csv', index=False)\n",
     "\n",
     "# test create dataset 1\n",
-    "create_dataset(1)\n"
+    "# create_dataset(2)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -422,15 +317,12 @@
       "type: testing\n",
       "type: training\n",
       "type: validation\n",
-      "type: testing\n",
-      "type: training\n",
-      "type: validation\n",
       "type: testing\n"
      ]
     }
    ],
    "source": [
-    "for series in range(2, 9):\n",
+    "for series in range(3, 9):\n",
     "    create_dataset(series)"
    ]
   }
