support multi channel for TD only

--- a/DataPreprocess.ipynb
+++ b/DataPreprocess.ipynb
@@ -8,7 +8,27 @@
    "source": [
     "import pandas as pd \n",
     "import numpy as np\n",
-    "import os"
+    "import os\n",
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_channels(raw_df: pd.DataFrame, column_data_str: str, labels):\n",
+    "    f, ax = plt.subplots(len(column_data_str), 1, figsize=(30, 3 * len(column_data_str)))\n",
+    "    f.tight_layout(pad=2)\n",
+    "    timeseries_len = raw_df.shape[0]\n",
+    "    for index, column_name in enumerate(column_data_str):\n",
+    "        ax[index].plot(range(timeseries_len), raw_df[column_name])\n",
+    "        ax[index].set_title(f\"channel: {column_name}\", fontsize=20)\n",
+    "\n",
+    "        height_line = 1\n",
+    "        ax[index].fill_between(range(timeseries_len), 0, height_line, where=labels > 0, color='red', alpha=0.2, transform=ax[index].get_xaxis_transform())\n",
+    "    plt.show()"
    ]
   },
   {
