add seed_value for reproduce result

--- a/TIRE_workflow.ipynb
+++ b/TIRE_workflow.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
     "# import experiments.replication as x\n",
     "# import experiments.each_dimensions as x\n",
     "# import experiments.each_dimensions_ICA as x\n",
-    "import experiments.EEG_DMD as x \n"
+    "import experiments.Original as x\n"
    ]
   },
   {
@@ -69,7 +69,7 @@
     }
    ],
    "source": [
-    "workflow = x.Experiment()\n",
+    "workflow = x.Original_Experiment()\n",
     "workflow.set_hyperparameter_type('alpha')\n",
     "workflow.hyperparams.experiment_name"
    ]
