seperate test experiment into 3 files, change save path for metrics

--- a/DataPreprocess.ipynb
+++ b/DataPreprocess.ipynb
@@ -345,6 +345,263 @@
     "for series in range(3, 9):\n",
     "    create_dataset(series)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Generated dataset "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Jump mean"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import simulate \n",
+    "import utils\n",
+    "\n",
+    "utils.setup_random_seed()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For formulation, check the TIRE paper at page 5\n",
+    "Target: examine what data circumstances DMD should be chosen over L2 ?\n",
+    "- [Done] Case 1: For jumpmean \n",
+    "    - 1 real jump mean\n",
+    "    - 2 noise channels (still use AutoRegressive but with constant mean and variance). \n",
+    "- Case 2: For jumpman\n",
+    "    - 1 real jump mean \n",
+    "    - 2 noise channels, but use Gausian noise \n",
+    "- Case 3: Channels are nearly the same in distribution shape, but different in magnitude \n",
+    "    - Case 3.1: 3 channels jump mean \n",
+    "    - Case 3.2: 3 channels Gaussian \n",
+    "- Case 4: Mean and variance changed \n",
+    "    - 1 channel mean \n",
+    "    - 1 channel variance \n",
+    "    - 1 channels noise "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## case 1 \n",
+    "def generate_jumpingmean_ar_noise(nr_cp=49, delta_t_cp = 100, delta_t_cp_std = 10, window_size=20):\n",
+    "    \"\"\"\n",
+    "    Generates one instance of a jumping mean time series, together with the corresponding windows and parameters\n",
+    "    \"\"\"\n",
+    "    mu = np.zeros((nr_cp,))\n",
+    "    parameters_jumpingmean = []\n",
+    "    for n in range(1,nr_cp):\n",
+    "        mu[n] = mu[n-1] + n / 16 #np.random.randn()*np.sqrt(delta_t_cp_std**3)\n",
+    "    # print(f'mu: {mu}')\n",
+    "    for n in range(nr_cp):\n",
+    "        nr = int(delta_t_cp+ np.random.randn()*np.sqrt(delta_t_cp_std))\n",
+    "        parameters_jumpingmean.extend(mu[n]*np.ones((nr,)))\n",
+    "    \n",
+    "    parameters_jumpingmean = np.array([parameters_jumpingmean]).T\n",
+    "\n",
+    "    channels = 3\n",
+    "    ts_length = len(parameters_jumpingmean)\n",
+    "    all_timeseries = []\n",
+    "    for channel in range(channels):\n",
+    "        timeseries = np.zeros((ts_length))\n",
+    "        for i in range(2,ts_length):\n",
+    "            if channel == 0:\n",
+    "            #print(ar2(timeseries[i-1],timeseries[i-2], 0.6,-0.5, parameters_jumpingmean[i], 1.5))\n",
+    "                timeseries[i] = simulate.ar2(timeseries[i-1],timeseries[i-2], 0.6,-0.5, parameters_jumpingmean[i], 1.5)\n",
+    "            elif channel == 1:\n",
+    "                timeseries[i] = simulate.ar2(timeseries[i-1],timeseries[i-2], 0.9,-0.7, -1, 5.5)\n",
+    "            else:\n",
+    "                timeseries[i] = simulate.ar2(timeseries[i-1],timeseries[i-2], 0.6,-0.4, 0, 3.5)\n",
+    "        \n",
+    "        all_timeseries.append(timeseries)\n",
+    "    \n",
+    "    breakpoints = utils.parameters_to_cps(parameters_jumpingmean, window_size) # len(breakpoints) = len(timeseries) - 2*window_size + 1\n",
+    "    full_breakpoints =  np.concatenate([[0] * (window_size - 1), breakpoints , [0] * window_size])\n",
+    "\n",
+    "    b_index = np.where(full_breakpoints > 0)[0]\n",
+    "    full_breakpoints[b_index] = [1] * len(b_index)\n",
+    "    \n",
+    "    return np.array(all_timeseries), full_breakpoints\n",
+    "\n",
+    "### case 2 \n",
+    "def generate_jumpingmean_gaussian_noise(nr_cp=49, delta_t_cp = 100, delta_t_cp_std = 10, window_size=20):\n",
+    "    \"\"\"\n",
+    "    Generates one instance of a jumping mean time series, together with the corresponding windows and parameters\n",
+    "    \"\"\"\n",
+    "    mu = np.zeros((nr_cp,))\n",
+    "    parameters_jumpingmean = []\n",
+    "    for n in range(1,nr_cp):\n",
+    "        mu[n] = mu[n-1] + n / 16 #np.random.randn()*np.sqrt(delta_t_cp_std**3)\n",
+    "    # print(f'mu: {mu}')\n",
+    "    for n in range(nr_cp):\n",
+    "        nr = int(delta_t_cp+ np.random.randn()*np.sqrt(delta_t_cp_std))\n",
+    "        parameters_jumpingmean.extend(mu[n]*np.ones((nr,)))\n",
+    "    \n",
+    "    parameters_jumpingmean = np.array([parameters_jumpingmean]).T\n",
+    "\n",
+    "    channels = 3\n",
+    "    ts_length = len(parameters_jumpingmean)\n",
+    "    all_timeseries = []\n",
+    "    for channel in range(channels):\n",
+    "        timeseries = np.zeros((ts_length))\n",
+    "        for i in range(2,ts_length):\n",
+    "            if channel == 0:\n",
+    "            #print(ar2(timeseries[i-1],timeseries[i-2], 0.6,-0.5, parameters_jumpingmean[i], 1.5))\n",
+    "                timeseries[i] = simulate.ar2(timeseries[i-1],timeseries[i-2], 0.6,-0.5, parameters_jumpingmean[i], 1.5)\n",
+    "            elif channel == 1:\n",
+    "                timeseries[i] = np.random.normal(-1, 5.5)\n",
+    "            else:\n",
+    "                timeseries[i] = np.random.normal(0, 3.5)\n",
+    "        \n",
+    "        all_timeseries.append(timeseries)\n",
+    "    \n",
+    "    breakpoints = utils.parameters_to_cps(parameters_jumpingmean, window_size) # len(breakpoints) = len(timeseries) - 2*window_size + 1\n",
+    "    full_breakpoints =  np.concatenate([[0] * (window_size - 1), breakpoints , [0] * window_size])\n",
+    "\n",
+    "    b_index = np.where(full_breakpoints > 0)[0]\n",
+    "    full_breakpoints[b_index] = [1] * len(b_index)\n",
+    "    \n",
+    "    return np.array(all_timeseries), full_breakpoints\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Case 3: Channels are nearly the same in distribution shape, but different in magnitude \n",
+    "# Case 3.1: 3 channels jump mean \n",
+    "def generate_jumpingmean_diff_magnitude(nr_cp=49, delta_t_cp = 100, delta_t_cp_std = 10, window_size=20):\n",
+    "    \"\"\"\n",
+    "    Generates one instance of a jumping mean time series, together with the corresponding windows and parameters\n",
+    "    \"\"\"\n",
+    "    mu = np.zeros((nr_cp,))\n",
+    "    parameters_jumpingmean = []\n",
+    "    for n in range(1,nr_cp):\n",
+    "        mu[n] = mu[n-1] + n / 16 #np.random.randn()*np.sqrt(delta_t_cp_std**3)\n",
+    "    # print(f'mu: {mu}')\n",
+    "    for n in range(nr_cp):\n",
+    "        nr = int(delta_t_cp+ np.random.randn()*np.sqrt(delta_t_cp_std))\n",
+    "        parameters_jumpingmean.extend(mu[n]*np.ones((nr,)))\n",
+    "    \n",
+    "    parameters_jumpingmean = np.array([parameters_jumpingmean]).T\n",
+    "\n",
+    "    channels = 3\n",
+    "    ts_length = len(parameters_jumpingmean)\n",
+    "    all_timeseries = []\n",
+    "    for channel in range(channels):\n",
+    "        timeseries = np.zeros((ts_length))\n",
+    "        for i in range(2,ts_length):\n",
+    "            if channel == 0:\n",
+    "            #print(ar2(timeseries[i-1],timeseries[i-2], 0.6,-0.5, parameters_jumpingmean[i], 1.5))\n",
+    "                timeseries[i] = simulate.ar2(timeseries[i-1],timeseries[i-2], 0.6,-0.5, parameters_jumpingmean[i], 1.5)\n",
+    "            elif channel == 1:\n",
+    "                timeseries[i] = simulate.ar2(timeseries[i-1],timeseries[i-2], 0.9,-0.7, parameters_jumpingmean[i], 5.5)\n",
+    "            else:\n",
+    "                timeseries[i] = simulate.ar2(timeseries[i-1],timeseries[i-2], 0.8,-0.1, parameters_jumpingmean[i], 3.5)\n",
+    "        \n",
+    "        all_timeseries.append(timeseries)\n",
+    "    \n",
+    "    breakpoints = utils.parameters_to_cps(parameters_jumpingmean, window_size) # len(breakpoints) = len(timeseries) - 2*window_size + 1\n",
+    "    full_breakpoints =  np.concatenate([[0] * (window_size - 1), breakpoints , [0] * window_size])\n",
+    "\n",
+    "    b_index = np.where(full_breakpoints > 0)[0]\n",
+    "    full_breakpoints[b_index] = [1] * len(b_index)\n",
+    "    \n",
+    "    return np.array(all_timeseries), full_breakpoints"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def saving_single_generate_dataset(timeseries, breakpoints, dataset_number: int, datatype: str, folder_prefix: str):\n",
+    "    utils.create_folder_if_not_exist(f'./data-gen/{folder_prefix}')\n",
+    "\n",
+    "    timeseries_df = pd.DataFrame(timeseries.T)\n",
+    "    timeseries_df.columns = [f'col_{col}' for col in timeseries_df.columns]\n",
+    "    timeseries_df.to_csv(f'./data-gen/{folder_prefix}/{folder_prefix}-dataset{dataset_number}-{datatype}-data.csv', index=False)\n",
+    "    \n",
+    "\n",
+    "    breakpoints_df = pd.DataFrame(breakpoints)\n",
+    "    breakpoints_df.columns = [f'col_{col}' for col in breakpoints_df.columns]\n",
+    "    breakpoints_df.to_csv(f'./data-gen/{folder_prefix}/{folder_prefix}-dataset{dataset_number}-{datatype}-label.csv', index=False)\n",
+    "\n",
+    "'''\n",
+    "generated_type:\n",
+    "case 1: jumpmean_ar\n",
+    "case 2: jumpmean_gauss\n",
+    "case 3.1: jumpmean_same_dis\n",
+    "case 3.2: gauss_same_dis\n",
+    "case 4: jummpmean_scalevariance\n",
+    "'''\n",
+    "def saving_generate_datasets(generated_type: str):\n",
+    "    # if generated_type == 'jumpmean_ar' or generated_type == 'case1':\n",
+    "    #     generate_dataset_f = generate_jumpingmean_ar_noise\n",
+    "    #     folder_prefix = 'jumpmean_ar'\n",
+    "    if generated_type == 'jumpmean_gauss' or generated_type == 'case2':\n",
+    "        generate_dataset_f = generate_jumpingmean_gaussian_noise\n",
+    "        folder_prefix = 'jumpmean-gauss' # for folder convention \n",
+    "    else:\n",
+    "        print('Please check generated_type parameter')\n",
+    "        return \n",
+    "    for dataset_number in range(1, 11):\n",
+    "        for t in [('training', 49), ('validation', 49), ('testing', 49)]:\n",
+    "\n",
+    "            timeseries, breakpoints = generate_dataset_f(nr_cp = t[1], window_size=20) # 20 for jump mean\n",
+    "            saving_single_generate_dataset(timeseries, breakpoints, dataset_number, t[0], folder_prefix)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "saving_generate_datasets('jumpmean_gauss')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'../data-gen/jumpmean-gauss/jumpmean-gauss-dataset1-training-data.csv'"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "folder_prefix = '../data-gen/jumpmean-gauss/jumpmean-gauss'\n",
+    "dataset_number = 1 \n",
+    "f'{folder_prefix}-dataset{dataset_number}-training-data.csv'"
+   ]
   }
  ],
  "metadata": {
